# SDU-Control-Tasks

./: README.md
belt_task/: CMakeLists.txt  package.xml
belt_task/config/: bearing_position.yaml  force_pid_gain.yaml  ft_init_data.yaml  initial_condition.yaml  initial_position.yaml  pose_pid_gain.yaml
belt_task/config/motion/: initialize_belt_task.yaml  part_frame_belt_task.yaml  tcp_belt_task.yaml
belt_task/config/robot_A/: data_log.csv  initialize_robot.yaml
belt_task/config/robot_A/motion/: initialize.yaml  tcp_belt_task.yaml
belt_task/config/robot_B/: data_log.csv  initialize_robot.yaml
belt_task/config/robot_B/motion/: initialize.yaml  tcp_belt_task.yaml
belt_task/config/wc/UR10e/: DHParam.xml  PosRPYParam.xml
belt_task/config/wc/UR10e/Geometry/: Joint0.mtl  Joint4.mtl  ToolFlange.mtl
belt_task/config/wc/UR10e_2018/: PosRPYParam.xml  UR10e_a.xml  UR10e_b.xml
belt_task/config/wc/UR10e_2018/Geometry/: UR.mtl
belt_task/include/: belt_task.h  data_logging.h  log.h  ros_node.h  task_motion.h  task_robot.h  tool_estimation.h  ur_robot.h
belt_task/src/: data_logging.cpp  main.cpp  ros_node.cpp  task_motion.cpp  task_robot.cpp  tool_estimation.cpp  ur_robot.cpp
wc/UR10e/: CalibratedDHParam.xml  UR10e.xml
wc/UR10e/Geometry/: Joint1.mtl  Joint2.mtl  Joint3.mtl  base.mtl
wc/UR10e/Geometry/ba/: UR.mtl
wc/UR10e_2018/: DHParam.xml
